--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="../../Documents/Media/2.jpg" />
+    <img src="https://img5.goodfon.ru/wallpaper/nbig/b/e8/game-over-konets-igry-zastavka.jpg" />
     <script src="./vis.js"></script>
   </body>
 </html>
