--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Visilica game</title>
   </head>
   <body>
-    <img src="https://img5.goodfon.ru/wallpaper/nbig/b/e8/game-over-konets-igry-zastavka.jpg" />
+    <img src="https://img5.goodfon.ru/wallpaper/nbig/b/e8/game-over-konets-igry-zastavka.jpg" width="100%" alt="Hello, bro!"/>
     <script src="./vis.js"></script>
   </body>
 </html>
