--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Visilica game</title>
   </head>
   <body>
-    <img src="https://img5.goodfon.ru/wallpaper/nbig/b/e8/game-over-konets-igry-zastavka.jpg" width="100%" alt="Hello, bro!"/>
+    <img src="https://img5.goodfon.ru/wallpaper/nbig/b/e8/game-over-konets-igry-zastavka.jpg" width="100%" alt="Hello, bro!" border="0"/>
     <script src="./vis.js"></script>
   </body>
 </html>
