--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visilica game</title>
   </head>
+  <style> 
+    body {
+      margin: 0px;
+    }
+  </style>
   <body>
     <img src="https://img5.goodfon.ru/wallpaper/nbig/b/e8/game-over-konets-igry-zastavka.jpg" width="100%" alt="Hello, bro!" border="0"/>
     <script src="./vis.js"></script>
